--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "init": "^0.1.2",
-    "next": "15.2.2",
+    "next": "^15.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
