--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "sass": "^1.85.1",
     "swiper": "^11.2.5"
@@ -30,6 +31,7 @@
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.2",
     "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.0.14"
   }
 }
