--- a/package.json
+++ b/package.json
@@ -22,16 +22,21 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "sass": "^1.85.1",
-    "swiper": "^11.2.5"
+    "swiper": "^11.2.5",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.22.0",
     "@tailwindcss/postcss": "^4.0.14",
+    "@types/node": "^24.9.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.2",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "typescript": "^5.9.3"
   }
 }
