--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.6.1",
+    "@reduxjs/toolkit": "^2.9.2",
     "autoprefixer": "^10.4.21",
-    "axios": "^1.8.3",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "init": "^0.1.2",
@@ -23,6 +23,7 @@
     "react-redux": "^9.2.0",
     "sass": "^1.85.1",
     "swiper": "^11.2.5",
+    "typescript-cookie": "^1.0.6",
     "yup": "^1.7.1"
   },
   "devDependencies": {
