--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "init": "^0.1.2",
+    "jwt-decode": "^4.0.0",
     "next": "^15.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
