--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.6",
     "init": "^0.1.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.563.0",
     "next": "^15.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
