--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "sass": "^1.85.1",
-    "swiper": "^11.2.5",
+    "swiper": "^12.1.2",
     "typescript-cookie": "^1.0.6",
     "yup": "^1.7.1"
   },
@@ -41,5 +41,8 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.14",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1"
   }
 }
